--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,6 @@
 	<title></title>
 </head>
 <body>
-<p>this is testing page</p>
-<h1>this is thesing heading tooo..</h1>
-<h1>i am here to show code is this good or not..</h1>
-
+	<p>This is for contact us page</p>
 </body>
 </html>
